# AVC

./: .gitignore  README.md
codec1/src/: CMakeLists.txt  binarystream.h  codebook  lbg.h  metadata.h  mono_hist  wavcb.cpp  wavcmp.cpp  wavcp.cpp  wavhist.cpp  wavhist.h  wavquant.cpp  wavvq.cpp
codec2/src/: CMakeLists.txt  InterChannelDecode.cpp  InterChannelEncode.cpp  LPAdecode.cpp  LPAencode.cpp  bitstream.h  golomb.h  metadata.h  order2Predictor.cpp  predictors.h  test.cpp  wavcmp.cpp  wavhist.h
codec3/: FrameParser.h  IntraFrameEncoderLS.cpp  bitstream.h  jpneg_lossy.cpp  metadata.h
codec3/src/: CMakeLists.txt  JPEGLS_test.cpp  PlayerCamera.cpp  PlayerYUV.cpp  golomb.h  jpneg_ls.cpp  lhe.cpp  lossy_lhe.cpp  test.cpp
